<resources>
    <string name="app_name">AndroidBingoProject</string>
    <string name="Your_score_is">Your score is \n</string>
    <string name="no_more_moves">No More Moves !</string>
    <string name="what">What would you like to learn now?</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="ok" translatable="false">OK</string>
    <string name="explain">"Come improve your understanding of addition, subtraction, multiplication and division! A good game for kindergarten through Fourth Grade. Kids will visually learn and practice math skills!  Choose what would you like to do, solve the exercises, score high and enjoy your bingo game!  let's play! "</string>
    <string name="name_player">New Game</string>
    <string name="mew_player">new player</string>
    <string name="email_s">enter your email subject</string>
    <string name="email_r">"We'd love to help us get better. If you have an idea or comment tell us "</string>
    <string name="email_b">enter your email body</string>
    <string name="send">send</string>
    <string name="enter_name">Enter name for record</string>
    <string name="enter">Ok</string>
    <string name="share">i invite you to play a bingo game</string>
    <string name="rate">Rate</string>
    <string name="Nickname">Nickname</string>
    <string name="score">Score</string>
    <string name="type">Type</string>
    <string name="table">Records Tables</string>
    <string name="bingo_explain">Get all bears\n In a row or in a column \n or in a diagonal !</string>
    <string name="win_dialog">Congratulations</string>
    <string name="you_lose">ohh no !\n No more moves!!</string>
    <string name="level_number">Level</string>
    <string name="next_level">Next Level</string>
    <string name="Continue_to">Continue to next mode</string>
    <string name="Lets_play">Let\'s play !</string>
    <string name="Exit">Exit</string>
    <string name="try_again">Try Again</string>
</resources>
