<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:background="@drawable/levels_back"

    >
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:id="@+id/easy_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:id="@+id/medium_button"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:id="@+id/hard_button"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="15dp"
        


        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textColor="#FF5722"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textSize="25dp"
            android:textColor="#000"

            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:id="@+id/level"
            android:background="#FF5722"
            android:alpha="0.7"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="*"
            android:background="#ECECEF"

            android:alpha="0.9"
            >

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"

                >

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textSize="25dp"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"

                    />

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Nickname"
                    android:textSize="25dp"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    />

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="25dp"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    />

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="25dp"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"

                    />
            </TableRow>


            <ListView
                android:alpha="0.6"
                android:background="@drawable/shpa_leader"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/my_list"/>


        </TableLayout>
    </LinearLayout>


</LinearLayout>