<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/rounded_dialog">



    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/easy"
        android:textSize="25sp"
        android:textColor="#fff"
        android:id="@+id/easy"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/medium"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_margin="5dp"

        android:background="@drawable/button_shape"
        android:id="@+id/medium"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textColor="#fff"
        android:textSize="25sp"
        android:text="@string/hard"
        android:background="@drawable/button_shape"
        android:id="@+id/hard"
        android:layout_gravity="center"/>

</LinearLayout>