<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_dialog_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/scroll_paper_img"
        android:layout_width="800dp"
        android:scaleType="fitXY"
        android:layout_height="350dp"
        android:src="@drawable/children_frame"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="115dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Your_score_is"
            android:id="@+id/score_tv"/>

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/next_level"
            android:background="@drawable/dialog_btn"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/exit_btn"
            android:text="@string/Exit"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/dialog_btn"
            />




    </LinearLayout>



</RelativeLayout>

